# task-tui

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  flake.nix  justfile  pyproject.toml
.github/workflows/: CI.yml  release.yml
src/task_tui/: TasTuiApp.tscc  app.py  config.py  data_models.py  exceptions.py  main.py  task.py  task_cli.py  utils.py  widgets.py
tests/: conftest.py  test_config.py  test_task_cli.py  test_utils.py
tests/app/: test_contexts_tab.py  test_projects_tab.py  test_task_store_dates.py  test_virtual_tags.py
