[project]
name = "impure-package"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.1",
    "textual>=6.3.0",
    "typer>=0.19.2",
]

[project.scripts]
task_tui = "task_tui:main.typer_app"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tui"]

[dependency-groups]
dev = [
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]




[tool.ruff]
line-length = 150
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
