[project]
name = "task-tui"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "textual>=6.7.1",
    "typer>=0.20.0",
]

[project.scripts]
task_tui = "task_tui:main.typer_app"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tui"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]




[tool.ruff]
line-length = 150
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "D", "DOC"]
ignore = ["D1"]
fixable = ["ALL"]
unfixable = []
