[project]
name = "task-tui"
version = "0.1.0"
description = "Add your description here"
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    "textual>=6.2.1",
    "typer>=0.17.4",
]

[project.scripts]
task-tui = "task_tui:main.typer_app"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/task_tui"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "python-lsp-server>=1.13.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]




[tool.ruff]
line-length = 150
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "ANN", "D"]
ignore = ["D1"]
fixable = ["ALL"]
unfixable = []
pydocstyle.convention = "google"
